fix value overlap range-items

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -47,3 +47,7 @@ form {
     min-width: 30%;
     padding-right: 5px;
 }
+
+.td_val {
+    min-width: 60px;
+}
